# civikta

./: .env.example  .gitignore  EXTENDING.md  README.md  api-docs.html  deploy.ps1
apps/web/: .dockerignore  .env.local.example  .gcloudignore  Dockerfile  next.config.mjs  package-lock.json  package.json  (+1 more)
infra/: generate_media_seed.py  import_ward_boundaries.py  verify_geo.py
services/api/: .env.example  .gcloudignore  Dockerfile  pyproject.toml  requirements.txt
services/api/app/: __init__.py  main.py
services/api/app/agents/: complaint_triage_agent.py  tools.py
services/api/app/core/: auth.py  config.py  deps.py  geoutil.py
services/api/app/llm/: __init__.py  base.py  gemini.py  stub.py
services/api/app/models/: authority.py  issue.py  issue_report.py  routing_rule.py  user.py
services/api/app/pipeline/: __init__.py  agentic.py  base.py  deterministic.py
services/api/app/repositories/: __init__.py  base.py  memory.py  supabase.py
services/api/app/routers/: analytics.py  authority.py  feed.py  geo.py  issues.py  meta.py  oversight.py  reports.py  users.py
services/api/app/schemas/: ai.py  common.py  duplicate.py  geo.py  issue.py  report.py  routing.py
services/api/app/seeds/: authorities.py  delhi_wards.py  demo_issues.py  issue_types.py  routing_rules.py
services/api/app/services/: ai_triage_service.py  analytics_service.py  authority_service.py  corroboration_service.py  duplicate_detection_service.py  feed_service.py  geo_service.py  issue_service.py  oversight_service.py  report_service.py  routing_service.py  urgency_score_service.py
(+62 files in other folders)
