[project]
name = "civikta-api"
version = "0.1.0"
description = "CIVIKTA backend — Delhi civic issue intake, geo, routing, duplicate detection, feed"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
